--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,6 @@
 {
   "name": "frontend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,8 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.7.7",
-    "chromedriver": "^131.0.1",
-    "selenium-webdriver": "^4.26.0"
-  }
+    "axios": "^1.7.9",
+    "chromedriver": "^131.0.2",
+    "selenium-webdriver": "^4.27.0"
+  },
+  "description": ""
 }
